--- a/Bankey/Bankey.xcodeproj/xcshareddata/xcschemes/Bankey.xcscheme
+++ b/Bankey/Bankey.xcodeproj/xcshareddata/xcschemes/Bankey.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1B9CD5692B64CCE200FB6602"
+               BuildableName = "BankeyUnitTests.xctest"
+               BlueprintName = "BankeyUnitTests"
+               ReferencedContainer = "container:Bankey.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
